<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.group_finity</groupId>
    <artifactId>mascot</artifactId>
    <version>1.0.22</version>
    <packaging>jar</packaging>

    <name>Shimeji-ee</name>
    <description>A desktop mascot that freely wanders and plays around the screen</description>
    <url>https://github.com/DalekCraft2/Shimeji-Desktop</url>
    <inceptionYear>2009</inceptionYear>
    <licenses>
        <license>
            <name>Zlib</name>
            <url>https://www.zlib.net/zlib_license.html</url>
            <comments>The license used for Shimeji, by Yuki Yamada of Group Finity.</comments>
        </license>
        <license>
            <name>BSD-2-Clause</name>
            <url>https://opensource.org/license/bsd-2-clause</url>
            <comments>The license used for Shimeji-ee, by the Shimeji-ee Group.</comments>
        </license>
    </licenses>
    <organization>
        <name>Group Finity</name>
        <url>http://www.group-finity.com/</url>
    </organization>

    <scm/>
    <issueManagement/>
    <ciManagement/>
    <distributionManagement/>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>11</maven.compiler.release>
        <mainClass>com.group_finity.mascot.Main</mainClass>

        <libPrefix>lib</libPrefix>
        <libDirectory>${project.build.directory}/${libPrefix}</libDirectory>
    </properties>

    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <!-- AbsoluteLayout -->
            <groupId>org.netbeans.external</groupId>
            <artifactId>AbsoluteLayout</artifactId>
            <version>RELEASE270</version>
        </dependency>

        <dependency>
            <!-- Java Native Access Platform -->
            <groupId>net.java.dev.jna</groupId>
            <artifactId>jna-platform</artifactId>
            <version>5.17.0</version>
        </dependency>

        <dependency>
            <!-- OpenJDK Nashorn -->
            <groupId>org.openjdk.nashorn</groupId>
            <artifactId>nashorn-core</artifactId>
            <version>15.7</version>
        </dependency>

        <dependency>
            <!-- OS Detection -->
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-exec</artifactId>
            <version>1.5.0</version>
        </dependency>

        <dependency>
            <!-- OS Dark/Light Mode Detection -->
            <groupId>com.github.Dansoftowner</groupId>
            <artifactId>jSystemThemeDetector</artifactId>
            <version>3.9.1</version>
        </dependency>

        <dependency>
            <!-- Swing UI Themes -->
            <groupId>com.formdev</groupId>
            <artifactId>flatlaf</artifactId>
            <version>3.6.1</version>
        </dependency>

        <dependency>
            <!-- SLF4J Simple Binding -->
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>1.7.36</version>
            <scope>runtime</scope>
        </dependency>
    </dependencies>

    <build>
        <defaultGoal>clean verify</defaultGoal>
        <finalName>${project.name}</finalName>
        <!-- <resources>
            <resource>
                <directory>${project.basedir}/src/main/resources</directory>
                <filtering>false</filtering>
                <includes>
                    <include>**/*</include>
                </includes>
            </resource>
            <resource>
                <directory>${project.basedir}</directory>
                <filtering>false</filtering>
                <includes>
                    <include>LICENSE.txt</include>
                </includes>
            </resource>
        </resources> -->
        <plugins>
            <plugin>
                <!-- Compile -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.14.0</version>
                <configuration>
                    <release>${maven.compiler.release}</release>
                </configuration>
            </plugin>
            <!-- <plugin>
                &lt;!&ndash; Attach sources &ndash;&gt;
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.3.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                &lt;!&ndash; Attach Javadocs &ndash;&gt;
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.11.3</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin> -->
            <plugin>
                <!-- Set main class -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.4.2</version>
                <configuration>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                            <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                            <classpathPrefix>${libPrefix}/</classpathPrefix>
                            <mainClass>${mainClass}</mainClass>
                        </manifest>
                        <manifestEntries>
                            <!-- This fixes a warning involving restricted native access on JDK 24+ -->
                            <Enable-Native-Access>ALL-UNNAMED</Enable-Native-Access>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <!-- Copy dependencies to target/lib directory -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.8.1</version>
                <executions>
                    <execution>
                        <id>copy-dependencies</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${libDirectory}</outputDirectory>
                            <overWriteReleases>false</overWriteReleases>
                            <overWriteSnapshots>false</overWriteSnapshots>
                            <overWriteIfNewer>true</overWriteIfNewer>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <!-- Create an .exe file to run the application -->
                <groupId>com.akathist.maven.plugins.launch4j</groupId>
                <artifactId>launch4j-maven-plugin</artifactId>
                <version>2.6.0</version>
                <executions>
                    <execution>
                        <id>l4j-clui</id>
                        <phase>package</phase>
                        <goals>
                            <goal>launch4j</goal>
                        </goals>
                        <configuration>
                            <headerType>gui</headerType>
                            <outfile>${project.build.directory}/${project.build.finalName}.exe</outfile>
                            <jar>${project.build.finalName}.jar</jar>
                            <dontWrapJar>true</dontWrapJar>
                            <downloadUrl>https://www.oracle.com/java/technologies/downloads/</downloadUrl>
                            <!-- <supportUrl>${project.ciManagement.url}</supportUrl> -->
                            <chdir>.</chdir>
                            <icon>${project.basedir}/img/icon.ico</icon>
                            <classPath>
                                <mainClass>${mainClass}</mainClass>
                            </classPath>
                            <singleInstance>
                                <mutexName>${project.name}</mutexName>
                                <windowTitle/>
                            </singleInstance>
                            <jre>
                                <path>%JAVA_HOME%;%PATH%</path>
                                <requiresJdk>true</requiresJdk>
                                <minVersion>${maven.compiler.release}</minVersion>
                                <maxVersion/>
                            </jre>
                            <versionInfo>
                                <fileDescription>${project.name} Launcher</fileDescription>
                                <copyright>Copyright (C) Group-Finity. All rights reserved.</copyright>
                            </versionInfo>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <!-- Generate the ZIP files from the old Ant build.xml script -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <!-- Create ZIP files for the source and the three release variants -->
                        <id>create-zips</id>
                        <phase>package</phase>
                        <goals>
                            <goal>run</goal>
                        </goals>
                        <configuration>
                            <target>
                                <!-- Execute the "zip" target in build.xml -->
                                <ant antfile="${project.basedir}/build.xml">
                                    <target name="zip"/>
                                </ant>
                            </target>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
